<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/xoxocoffe" />

            <TextView
                android:id="@+id/xoxo_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_child"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/xoxo_text"
                android:textColor="@color/blow_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_icons"
                android:src="@drawable/address" />

            <TextView
                android:id="@+id/usa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/padding_text_view"
                android:text="@string/ksa_name"
                android:textColor="@color/blow_text" />

            <ImageView
                android:id="@+id/ment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_icons"
                android:src="@drawable/ment" />

            <TextView
                android:id="@+id/working"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/padding_text_view"
                android:text="@string/Working_time"
                android:textColor="@color/blow_text" />

            <ImageView
                android:id="@+id/internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_icons"
                android:src="@drawable/internet" />

            <TextView
                android:id="@+id/www"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/padding_text_view"
                android:text="@string/website_text"
                android:textAllCaps="true"
                android:textColor="@color/blow_text" />

            <ImageView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_icons"
                android:src="@drawable/mail" />

            <TextView
                android:id="@+id/com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Location_text"
                android:textColor="@color/blow_text" />

            <ImageView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_icons"
                android:src="@drawable/phonelink" />

            <TextView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/phone_number"
                android:textColor="@color/blow_text" />


            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_child"
                android:paddingLeft="@dimen/left"
                android:text="@string/name_text"
                android:textColor="@color/blow_text"
                android:textSize="19sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_child"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/left"
                android:paddingRight="@dimen/right"
                android:text="@string/description_text"
                android:textColor="@color/blow_text"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

